# s2geometry

./: .cproject  .project
doc/examples/: CMakeLists.txt  firestore_index.cc
