add_executable(point_index point_index.cc)
target_link_libraries(point_index LINK_PUBLIC s2testing s2)
add_executable(term_index term_index.cc)
target_link_libraries(term_index LINK_PUBLIC s2testing s2)
add_executable(firestore_index firestore_index.cc)
target_link_libraries(firestore_index LINK_PUBLIC s2testing s2)
